
Note that I had intneded to put more into 2.1, but paniced when I
realized you couldn't create new, blank forms any more.  It turned out
I needn't have worried, since the bug causing it was introduced after
2.0.1, anyway.  Maybe I need a release manager.  Then again, it's not
likely anywone but me cares.  It's not like I advertise this anywhere.

Version 2.2 (git tag grok-2.2, SVN 528), released 12.1.18
  * Date widgets were updating after every keystroke, which
    essentially disallows all entry other than direct editing of the
    value, barely.  This bug was introduced in 2.0.
  * Multiple Choice groups in a card would hide the selection of all
    but the last displayed (bottom-right) group.  This bug was
    introduced in 2.0. 
  * Moving summary window selection away from a modified record will no
    longer revert the movement
  * Input fields can now be combo boxes, whose menu is filled in from
    static values or the current values in the database
  * Time fields now support calendar popups and cursor/spin adjustment
  * Added Number fields, which act like spin boxes with adjustable
    range and precision
  * Added Choice Menu fields, which pop up a fixed menu of items.
    These can be used in place of a large number of Choice
    buttons.
  * Added Choice Group fields, which provide automatic layout for Choice
    fields, if you prefer them over the Choice Menu field type.
  * Added Flag List fields, which display a list, where the selected
    items correspond to flags to set.  These can take the place of
    large groups of Flag fields, although they don't save much space.
  * Added Flag Group fields, which provide automatic layout for Flag
    fields, if you prefer them over the Flag List field type.

Databases which use the new widget types (Number, Choice Group, Choice
Menu, Flag Group, Flag Menu) will not function correctly in 2.1 or
earlier.  Combo boxes and special date/time widgets will revert to
plain input fields in 2.1 or earlier.