@@ -2,4 +2,4 @@
  * version string for grok
  */
 
-#define VERSION "V2.2.1"
+#define VERSION "V2.2.2"
